# gettext-extractors

./: Cargo.toml  README.md
src/: main.rs  navigator.rs  visitor.rs
