[package]
name = "gettext-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
globwalk = "0.8.1"
serde_json = "1.0.91"
swc_ecma_parser = "0.133.8"
swc_common = "0.31.4"
swc_core = { version = "0.75.22", features = [
    "ecma_plugin_transform",
    "ecma_utils",
    "ecma_visit",
    "ecma_ast",
    "common",
    "ecma_quote",
    "testing_transform",
] }
clap = { version = "4.1.4", features = ["derive"] }
